# LPNDialect

./: CMakeLists.txt  run.sh
examples/: cache_net.py  multi_take_net.py  network_net.py  protoacc_components.py  simple_array_net.py  simple_net.py  split_merge_net.py  strip_demo.py
include/LPN/Conversion/: CMakeLists.txt  LPNPasses.h  LPNPasses.td
include/LPN/Dialect/: CMakeLists.txt  LPNAttributes.h  LPNAttributes.td  LPNDialect.h  LPNDialect.td  LPNOps.h  LPNOps.td  LPNTypes.h  LPNTypes.td
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Bindings/Python/: LPNAttributes.cpp
lib/Dialect/: CMakeLists.txt  LPNAttributes.cpp  LPNDialect.cpp  LPNOps.cpp  LPNTypes.cpp
lib/Transforms/: CMakeLists.txt  LPNAbstractHiddenStatePass.cpp  LPNFusePrivatePlacesPass.cpp  LPNLinkTokenCreatesPass.cpp  LPNNormalizeDelaysPass.cpp  LPNRetainCopyPass.cpp  LPNRetainHypergraphPass.cpp  LPNRetainObservablesPass.cpp  LPNSimulationPass.cpp  LPNStripHiddenValuesPass.cpp  LPNSynthesizeGuardPass.cpp  LPNValidationPass.cpp
lpnlang_mlir/: __init__.py
test/: CMakeLists.txt  run_filecheck.py
test/Transforms/: fuse-private-places.mlir  normalize-delays.mlir  retain-observables.mlir
tools/: CMakeLists.txt
tools/lpn-opt/: CMakeLists.txt  lpn-opt.cpp
